--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@tailwindcss/forms": "^0.5.7",
 		"@types/eslint": "^8.56.0",
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
 		"@typescript-eslint/parser": "^7.0.0",
@@ -39,11 +40,12 @@
 	"type": "module",
 	"dependencies": {
 		"@unpic/svelte": "^0.0.51",
-		"bits-ui": "^0.21.4",
+		"bits-ui": "^0.21.6",
 		"clsx": "^2.1.0",
 		"cmdk-sv": "^0.0.17",
 		"mode-watcher": "^0.3.0",
 		"svelte-radix": "^1.1.0",
+		"svelte-sonner": "^0.3.24",
 		"tailwind-merge": "^2.2.2",
 		"tailwind-variants": "^0.2.1",
 		"vaul-svelte": "^0.3.0"
