--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"cmdk-sv": "^0.0.17",
 		"embla-carousel-svelte": "^8.1.7",
 		"mode-watcher": "^0.3.0",
+		"svelte-meta-tags": "^3.1.4",
 		"svelte-radix": "^1.1.0",
 		"svelte-sonner": "^0.3.24",
 		"tailwind-merge": "^2.2.2",
